--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -15,6 +15,18 @@ body
   max-width: $width
   margin: 0 auto
 
+  #content_header
+    margin: 10px 0
+    position: relative
+    h1
+      font-weight: bold
+      font-size: 1.6em
+      color: black
+      text-decoration: none
+
+      a
+        color: inherit
+        text-decoration: inherit
 // Flash Messages
 %flashes
   color: black
