Made devise forms use full page style

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,8 +1,9 @@
-h2
-  ' Edit
-  = resource_name.to_s.humanize
+header#content_header
+  h1
+    ' Edit
+    = resource_name.to_s.humanize
 
-= semantic_form_for resource, as: resource_name, url: registration_path(resource_name), html: {method: :put} do |f|
+= semantic_form_for resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, class: 'fullpage'} do |f|
   = devise_error_messages!
 
   = f.inputs do
@@ -12,7 +13,8 @@ h2
     = f.input :password, hint: "Leave blank if you don't want to change it"
     = f.input :password_confirmation
 
-    = f.input :current_password, hint: "We need your current password to confirm changes"
+    - if f.object.encrypted_password.present?
+      = f.input :current_password, hint: "We need your current password to confirm changes"
   = f.actions do
     = f.action :submit, label: "Update"
 
