--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,6 +1,6 @@
 h2 Change your password
 
-= semantic_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put } do |f|
+= semantic_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'fullpage' } do |f|
   = devise_error_messages!
   = f.inputs do
     = f.input :reset_password_token, as: :hidden
