--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,6 +1,6 @@
 h2 Sign up
 
-= semantic_form_for resource, as: resource_name, url: registration_path(resource_name) do |f|
+= semantic_form_for resource, as: resource_name, url: registration_path(resource_name), html: {class: 'fullpage'} do |f|
   = devise_error_messages!
 
   = f.inputs do
